syntax = "proto3";

package proto;

service BlockChain {
  rpc AddBlock(AddBlockRequest) returns (AddBlockResponse) {}
  rpc GetBlockChain(GetBlockChainRequest) returns (GetBlockChainResponse) {}
}

message AddBlockRequest {
  string data = 1;
}

message AddBlockResponse {
  string hash = 1;
}

message Block {
  string prevBlockHash = 1;
  string data = 2;
  string hash = 3;
}

message GetBlockChainRequest {}

message GetBlockChainResponse {
  repeated Block blocks = 1;
}